@@ -1,3 +1,7 @@
+2006-09-14  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* gnu/testlet/java/awt/Menu/insert.java: New test.
+
 2006-09-14  Gary Benson  <gbenson@redhat.com>
 
 	* gnu/testlet/java/net/SocketPermission/implies.java: Tweak.
